# ft_vox

./: .gitignore  CMakeLists.txt  setup-windows.bat  setup.sh
includes/: triangle.h
includes/glad/: glad.h
src/: glad.c  main.cpp  triangle.cpp
